--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,152 @@
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 2px;
+    box-sizing: border-box;
 }
 
 
 
 
-/*Desktop*/
-@media screen and (min-width: 767px){
+
+@media /*Desktop*/ screen  and (min-width: 767px){
+
+#ombud_wrapper{
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-areas: 
+    'om_con om_log'
+    'fo fo'
+    ;
+
+    grid-template-columns: 65vw auto;
+    grid-template-rows:110vh 100px;
+    background-image: url(../img/broccoli.jpg);
+    background-position: 0 65%;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+#ombud_content{
+    grid-area: om_con;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 250px 20vh 250px;
+    color: #181818;
+}
+
+#ombud_content > h2{
+    font-size: 80px;
+    letter-spacing: 6px;
+    margin-bottom: 80px;
+    z-index: 5;
+    font-family: bebas Neue;
+    
+}
+
+#ombud_content > p{
+    font-size: 30px; 
+    z-index: 5;
+    line-height: 40px;
+}
+
+
+#ombud_logos{
+    grid-area: om_log;
+   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#logos_list{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 5;
+
+    padding:0;
+   
+}
+
+.logo_list_item{
+    padding: 40px;
+
+}
+
+
+.logo_list_img{
+    max-width: auto;
+    max-height: 70px;
+
+}
+
+#postnord_logo{
+    max-width: auto;
+    max-height: 100px;
+
+}
+
+#system_logo{
+
+    max-width: auto;
+    max-height: 120px;
+
+}
+
+#ombud_content_background{
+    position: absolute;
+    margin-top: 70px;
+    width: 55vw;
+    height: 500px;
+   
+    z-index: 2;
+
+    background-color: rgba(131, 130, 130, 0.4);
+    backdrop-filter: blur(13px);
+    border-radius: 90px;
+}
+
+
+
+#ombud_logos_background{
+    position: absolute;
+    margin-top: 0px;
+    width: 28vw;
+    height: 650px;
+    
+    z-index: 2;
+
+    background-color: rgba(131, 130, 130, 0.4);
+    backdrop-filter: blur(13px);
+    border-radius: 90px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -18,18 +157,35 @@
     width: 100%;
     height: 100%;
     grid-template-areas: 
-    'hd hd'
     'ho ho'
+    'rb rb'
     'hi hi'
     'fo fo'
     ;
 
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 80px 110vh 100vh 100px;
+    grid-template-rows:110vh 40px 100vh 100px;
     min-width: auto;
-  
+    background-image: url(../img/fruit_edit.jpg);
+    background-attachment: fixed;
+    background-position: 0 20%;
+    background-size: cover;
 }
 
+#hours_background{
+   
+    position: absolute;
+    margin-top: -310px;
+    margin-left:-45vw ;
+    top: 50%;
+    left: 50%;
+    width: 90vw;
+    height: 700px;
+    z-index: 2;
+    background-color: rgba(155, 154, 154, 0.4);
+    backdrop-filter: blur(15px);
+    border-radius: 90px;
+}
 
 #hours{
     
@@ -45,23 +201,25 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 250px auto;
     min-width: auto;
-    background-image: url(../img/kuling_white.jpg);
-    background-attachment: fixed;
-    background-position: 0 20%;
+   
+
+    z-index: 3;
+    margin-top: 130px;
     
     
 }
 
+
 .hours_content{
     padding-top: 70px;
-    
+    z-index: 3;
 }
 
 #hours_title{
     margin-bottom: 40px;
-    font-size: 55px;
-
-
+    font-size: 80px;
+    font-family: bebas Neue;
+    
 }
 
 
@@ -78,7 +236,7 @@
 
 }
 
-#hours__off_season{
+#hours_off_season{
     grid-area: of;
     
 
@@ -120,7 +278,7 @@
     justify-content: center;
     align-items: center;
     color: #181818;
-
+  
 
 }
 
@@ -158,20 +316,23 @@
 
 
 #hours_red_border{
-    height: 30px;
-    position: absolute;
-    bottom: -20%;
+    height: 40px;
+    grid-area:rb ;
+    
     background-color: rgb(180, 56, 34);
-    width: 100%;
     z-index: 2;
+    width: 100%;
+    
+    
 }
 
 
 #hitta_hit{
     grid-area: hi ;
-    background-image: url(../img/kuling_white.jpg);
+    background-image: url(../img/cucumber.jpg);
     background-attachment: fixed;
     background-position: 0 60%;
+    background-size: cover;
 
 }
 
@@ -185,15 +346,16 @@
 
 #hitta_hit_title{
     margin-bottom: 50px;
-
+    font-family: bebas Neue;
+    font-size: 80px;
 }
 
 .map_desktop{
 
-    border: 10px solid #09814A;
-    border-radius: 0px;
+    border: 6px solid #181818;
+    border-radius: 5px;
     margin: 0;
-    background-color:#09814A ;
+    background-color: #181818;;
 }
 
 .map_mobile{
@@ -216,7 +378,6 @@
     width: 100%;
     height: 100%;
     grid-template-areas: 
-    'hd hd'
     'we we'
     'bb bb'
     'oo oo'
@@ -226,7 +387,7 @@
     ;
 
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 80px 130vh 20px 150vh 20px 100vh 100px;
+    grid-template-rows: 130vh 20px auto 20px auto 100px;
     min-width: auto;
     
 }
@@ -238,18 +399,22 @@
 
 header{
 
-    grid-area: hd;
-   
-    position: -webkit-sticky;
-    position: sticky;
+    position: fixed;
+    height: 80px;
     top: 0;
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    background-color: #181818 ;
+    background-color: rgb(24, 24, 24, 0.9); 
     z-index: 10;
+    
+   
+    -webkit-backdrop-filter: saturate(180%) blur(20px);
+    backdrop-filter: saturate(180%) blur(20px);
+
+
    
 }
 
@@ -285,18 +450,12 @@ header{
     
     padding: 20px;
     position: absolute;
-    top: 2400px;
+    top: 240vh;
     
-    }
+}
 
 nav{
-    position: fixed;
-    right: 0;
-    left: 0;
-    margin-left: 400px;
-    margin-right: 400px;
-    padding-left: 60px ;
-    
+    position: absolute;
     
 }
 
@@ -308,7 +467,7 @@ nav{
     flex-direction: row;
     justify-content: center;
     list-style: none;
-  
+    padding: 0;
 
 }
 
@@ -345,6 +504,7 @@ nav{
     background-image: url(../img/tomater_helbild2.jpg);
     background-position: 50% 80%;
     background-size: 100%;
+    padding-top: 80px;
 }
 
 
@@ -492,7 +652,6 @@ nav{
     margin-left: -100px;
     cursor:pointer;
 
-    
 
 }
 
@@ -506,6 +665,7 @@ nav{
 .invisible{
     opacity: 0;
     transition: opacity 0.3s;
+
     
 }
 
@@ -535,7 +695,7 @@ nav{
     display: grid;
     grid-template-areas: 
     'ti ti'
-    'co co'
+    'sc ic'
     ;
     
     grid-template-rows: 30% auto;
@@ -543,6 +703,22 @@ nav{
 
     
     
+
+}
+
+#om_oss_egg_background{
+
+    position: absolute;
+    right: 10vw;
+    margin-top: 6vh;
+
+}
+
+
+#om_oss_egg_background > img{
+
+    transform: rotate(180);
+    max-height: 300px;
 
 }
 
@@ -562,27 +738,15 @@ nav{
 }
 
 #om_oss_title_container{
-grid-area: ti;
-}
+    grid-area: ti;
 
-#om_oss_content{
-    grid-area: co;
-    display: grid;
-    grid-template-areas:
-    'st is'
-    'ls li'
-    ;
-    grid-template-rows: 25% 1fr;
-    grid-template-columns: repeat(2, 1fr);
-    margin-top: 130px;
-    
 }
 
 #store_info{
-    grid-area: st;
+    grid-area: sc;
 }
 #island_info{
-    grid-area: is;
+    grid-area: ic;
    
 }
 
@@ -593,6 +757,8 @@ grid-area: ti;
     align-items: center;
     margin-right:60px;
     margin-left:60px;
+    margin-top: 15vh;
+    margin-bottom: 30vh;
   
 }
 
@@ -633,7 +799,8 @@ grid-area: ti;
 
 #info_store_logo{
 
-    grid-area: ls;
+    margin-top: 22vh;
+   
 }
 
 #info_store_logo > img{
@@ -642,8 +809,8 @@ grid-area: ti;
 }
 
 #info_island_logo{
-
-    grid-area: li;
+    margin-top: 7vh;
+    
 
 }
 
@@ -681,7 +848,7 @@ grid-area: ti;
 #kontakt{
     grid-area: ko;
     background-color: #181818;
-
+    margin-bottom: 30vh;
     display: grid;
     width: 100%;
     height: 100%;
@@ -691,7 +858,7 @@ grid-area: ti;
     ;
 
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 50% auto;
+    grid-template-rows: 40% auto;
 
 }
 
@@ -761,29 +928,157 @@ footer{
 
 }
 
-/*Mobile*/
-@media screen and (max-width: 767px){
+@media /*Mobile*/ screen and (max-width: 767px){
+
+    #ombud_wrapper{
+        display: grid;
+        width: 100%;
+        height: 100%;
+        grid-template-areas: 
+        'om_con'
+        'om_log'
+        'fo'
+        ;
+    
+        grid-template-columns: 100%;
+        grid-template-rows:100vh 150vh 100px;
+        background-image: url(../img/broccoli.jpg);
+        background-position: 50% 20%;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+    
+    #ombud_content{
+        grid-area: om_con;
+      
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 250px 150px 20vh 150px;
+        color: #181818;
+    }
+    
+    #ombud_content > h2{
+        font-size: 70px;
+        margin-bottom: 80px;
+        z-index: 5;
+    }
+    
+    #ombud_content > p{
+        font-size: 30px; 
+        z-index: 5;
+        line-height: 40px;
+    }
+    
+    
+    #ombud_logos{
+        grid-area: om_log;
+       
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    #logos_list{
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 5;
+        padding: 0;
+    }
+    
+    .logo_list_item{
+        
+        padding: 40px;
+        
+    }
+    
+    
+    .logo_list_img{
+        max-width: auto;
+        max-height: 50px;
+    
+    }
+    
+    #postnord_logo{
+        max-width: auto;
+        max-height: 100px;
+    
+    }
+    
+    #system_logo{
+    
+        max-width: auto;
+        max-height: 120px;
+    
+    }
+    
+    #ombud_content_background{
+        position: absolute;
+        margin-top: 60px;
+        width: 95vw;
+        height: 700px;
+       
+        z-index: 2;
+    
+        background-color: rgba(131, 130, 130, 0.4);
+        backdrop-filter: blur(9px);
+        border-radius: 90px;
+        
+    }
+    
+    
+    
+    #ombud_logos_background{
+        position: absolute;
+        margin-top: 0px;
+        width: 95vw;
+        height: 750px;
+        
+        z-index: 2;
+    
+        background-color: rgba(131, 130, 130, 0.4);
+        backdrop-filter: blur(9px);
+        border-radius: 90px;
+
+    }
+
+
+
+
+
+
+
+
 
     #storeInfoWrapper{
         display: grid;
         width: 100%;
         height: 100%;
         grid-template-areas: 
-        'hd hd'
         'ho ho'
         'hi hi'
         'fo fo'
         ;
     
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 100px 150vh 100vh 100px;
+        grid-template-rows: 170vh 100vh 100px;
         min-width: auto;
       
     }
     
+
+    #hours_background{
+   
+        display: none;
+    }
     
     #hours{
-        
+        padding-top: 150px;
         grid-area:ho ;
         display: grid;
         width: 100%;
@@ -797,22 +1092,27 @@ footer{
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: 250px auto;
         min-width: auto;
-        background-image: url(../img/kuling_white.jpg);
+        background-image: url(../img/fruit_edit.jpg);
         background-attachment: fixed;
-        background-position: 0 20%;
+        background-position: 0 50%;
         
+    
         
     }
     
+    
+
+
     .hours_content{
         padding-top: 70px;
         
     }
     
+    
     #hours_title{
         margin-bottom: 40px;
         font-size: 70px;
-    
+        font-family: bebas Neue;
     
     }
     
@@ -826,7 +1126,7 @@ footer{
     
     #hours_season{
         grid-area: on;
-    
+        
     
     }
     
@@ -850,7 +1150,7 @@ footer{
         align-items: center;
         font-size: 25px;
         margin-bottom: 50px;
-        color: #181818;
+        
     
     }
     
@@ -913,7 +1213,7 @@ footer{
     #hours_red_border{
         height: 30px;
         position: absolute;
-        bottom: -63%;
+        bottom: -70%;
         background-color: rgb(180, 56, 34);
         width: 100%;
         z-index: 2;
@@ -925,6 +1225,7 @@ footer{
         background-image: url(../img/kuling_white.jpg);
         background-attachment: fixed;
         background-position: 0 60%;
+      
     
     }
     
@@ -938,7 +1239,7 @@ footer{
     
     #hitta_hit_title{
         margin-bottom: 50px;
-    
+        text-align: center;
     }
     
     .map_desktop{
@@ -951,10 +1252,10 @@ footer{
     }
 
     .map_mobile{
-        border: 10px solid #09814A;
-        border-radius: 0px;
+        border: 6px solid #181818;
+        border-radius: 5px;
         margin: 0;
-        background-color:#09814A ; 
+        background-color: #181818; ; 
     }
 
 
@@ -963,10 +1264,10 @@ footer{
 #index_wrapper{
 
     display: grid;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     grid-template-areas: 
-    'hd'
+    
     'we'
     'bb'
     'oo'
@@ -976,28 +1277,32 @@ footer{
     ;
 
     grid-template-columns: 1fr;
-    grid-template-rows: 100px 130vh 20px 200vh 20px auto 100px;
+    grid-template-rows: 200vh 20px auto 20px auto 100px;
     
-    background-color: red;
+
 }
+
+
 
 
 
 header{
 
-    grid-area: hd;
-    position: -webkit-sticky;
-    position: sticky;
+    position: fixed;
+    height: 100px;
     top: 0;
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    background-color: #181818 ;
-    z-index: 3;
-}
+    background-color: rgb(24, 24, 24, 0.9);
+    z-index: 10;
 
+    -webkit-backdrop-filter: saturate(180%) blur(20px);
+    backdrop-filter: saturate(180%) blur(20px);
+   
+}
 
 #header_logo_link{
     
@@ -1045,7 +1350,7 @@ header{
     background-color: #181818;
     
     height: 100%;
-    width: 80vw;
+    width: 80%;
     position: fixed;
     top: 0;
     right: -140vw;
@@ -1056,42 +1361,44 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 2;
+    z-index: 10;
     
 }
 
-.menu_show{
-    
+.menu_show{   
     right: 0;
 }
 
 
 #mobile_nav_btn_wrapper{
     position: absolute;
-    right: 10px;
-    top: -15px;
+    right: 35px;
+    top: 25px;
     transition: 0.5s;
     cursor:pointer;
+    
 }
 
 #scroll_to{
 
+    
+    padding: 20px;
+    position: relative;
+    bottom: 1500%;
 
-padding: 20px;
-position: absolute;
-top: 2250px;
 
 }
 
 #mobile_nav_btn_img{
-    max-height: 130px ;
+    max-height: 50px ;
+   
 }
 
 
 .button_rotate{
     transform: rotate(90deg);
     transition: 0.5s;
-
+    
 
 }
 
@@ -1146,20 +1453,21 @@ top: 2250px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     height: 100%;
     background-image: url(../img/tomater_helbild2.jpg);
     background-position: 50% 80%;
-    background-size: 150%;
+    /* background-size: 150%; */
     width: 100%;
-
+    
 }
 
 
 
 
 
-@media screen and (max-width: 1100px){
+/* @media screen and (max-width: 1100px){
     #welcome_title > *{
         font-weight: 900;
         font-family: 'Bebas Neue';
@@ -1187,15 +1495,16 @@ top: 2250px;
         
     }
 
-}
+} */
 
 #welcome_title{
-    margin-top: 200px;
+    
     color: #FFFAF1;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 60px;
     
 }
 
@@ -1220,13 +1529,13 @@ top: 2250px;
 
 #welcome_text_1{
     font-size: 90px;
-    margin-top: 20%;
+   
     
 }
 
 #welcome_text_2 {
     font-size: 20px;
-    margin-top: -10px;
+   padding-bottom: 100%;
 }
 
 #welcome_text_2 > h3{
@@ -1290,17 +1599,26 @@ top: 2250px;
     grid-area: oo;
     background-color: #FFFAF1;
     display: grid;
+    width: 100%;
+    height: auto;
     grid-template-areas: 
     'ti'
-    'co'
+    'sc'
+    'ic'
     ;
     
-    grid-template-rows: 300px auto;
+    grid-template-rows: 30vh 70vh 80vh ;
     grid-template-columns: 100%;
 
-    
+    padding-bottom: 20%;
     
 
+}
+
+
+#om_oss_egg_background{
+
+    display: none;
 }
 
 .section_title{
@@ -1322,28 +1640,14 @@ top: 2250px;
 grid-area: ti;
 }
 
-#om_oss_content{
-    grid-area: co;
-    display: grid;
-    grid-template-areas:
-    'st'
-    'is'
-    ;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: 500px;
-    margin-top: 130px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-}
 
 #store_info{
-    grid-area: st;
-    margin-bottom: 350px;
+    grid-area: sc;
+    margin-top: 10vh;
+    
 }
 #island_info{
-    grid-area: is;
+    grid-area: ic;
     
 }
 
@@ -1383,26 +1687,21 @@ grid-area: ti;
 }
 
 .info_logo{
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 150px;
-
+    max-height: 20px;
+    margin-bottom: 300px;
 }
 
 #info_store_logo > img{
-    max-height: 60px;
-    position: relative;
-    bottom: 700px;
+    max-height: 50px;
+    margin-top: 6vh;
+    
     
 }
 
 #info_island_logo > a > img{
-    max-height: 120px;
-    position: relative;
-    bottom: 150px;
+    max-height: 100px;
+    margin-top: 7vh;
+    
 }
 
 .red_border{
@@ -1437,7 +1736,7 @@ grid-area: ti;
 
     display: grid;
     width: 100%;
-    height: auto;
+    height: 100%;
     grid-template-areas: 
     'ti'
     'ma'
