--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,246 @@
 
 @media /*Desktop*/ screen  and (min-width: 767px){
 
+
+#news_wrapper{
+
+display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-areas: 
+    'of_ti'
+    'offers'
+    'fo' 
+    ;
+
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 38vh auto 100px;
+    background-position: 0 65%;
+    background-size: cover;
+    background-attachment: fixed;
+    background-color: #eceaea;
+}
+
+#news_title_container{
+    grid-area: of_ti;
+    font-size: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-end;
+
+}
+#news_title_container > h1{
+   margin-bottom: 40px;
+   margin-left: 4vw;
+   font-family: bebas Neue;
+   color: #181818;
+}
+
+#offers_container{
+    grid-area:offers;
+    display: flex;
+    flex-direction: row;
+    
+    justify-content: center;
+    margin-bottom: 10vh;
+}
+
+#offers_list{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    
+    justify-content: flex-start;
+    padding: 0;
+    list-style: none;
+    flex: 1;
+    padding-right: 4vw ;
+    padding-left: 4vw;
+    flex-wrap: wrap;
+    
+}
+
+.offers_list_item{
+    width: 320px;
+    height: 350px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    margin-right: 6vw;
+    margin-bottom: 6vh;
+    border-radius: 20px;
+
+    transition: 0.3s;
+
+
+}
+
+.offers_list_item > img{
+    margin-top: 3vh;
+    max-width: 200px ;
+
+}
+
+.offers_list_item > h3{
+    margin-top: 6vh;
+    
+
+}
+
+
+.offers_list_item > h2{
+    margin-top: 3vh;
+    color: rgb(196, 72, 51);
+    
+
+}
+
+.offers_list_item:hover{
+    transform: scale(1.1);
+    transition: 0.3s;
+
+    
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#karingon_wrapper{
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-areas: 
+    'kti kti'
+    'bor bor'
+    'aim atx'
+    'htx him'
+    'sim stx'
+    'fo fo' 
+    ;
+
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 100vh 30px 100vh 100vh 100vh 100px;
+    background-position: 0 65%;
+    background-size: cover;
+    background-attachment: fixed;
+    background-color: whitesmoke;
+}
+
+#karingon_title_container{
+    grid-area: kti;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 80px;
+    font-family: bebas Neue;
+    
+    color: rgb(235, 231, 231);
+    background-image: url(../img/boat.jpg) ;
+    background-size: auto;
+    background-position: 30% 3%;
+    background-attachment: fixed;
+    
+    
+}
+
+#karingon_border{
+    grid-area: bor;
+    background-color: rgb(180, 56, 34);
+    height: 100%;
+    width: 100%;
+    
+}
+
+#karingon_title_container > h1{
+    font-family: bebas Neue;
+    margin-bottom: -20px;
+    letter-spacing: 7px;
+}
+
+#k_img_about_island{
+    grid-area: aim;
+}
+#k_img_history{
+    grid-area:him ;
+}
+#k_img_ssrs{
+    grid-area: sim;
+}
+
+#k_about_island{
+    grid-area: atx;
+    
+}
+#k_history{
+    grid-area: htx;
+}
+#k_ssrs{
+    grid-area: stx;
+}
+
+
+.k_text_article{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 7vw;
+    
+}
+.k_text_article > h3{
+    font-size: 5vh;
+    margin-bottom: 5vh;
+    color: #181818;
+}
+
+.k_text_article > p{
+    font-size: 3vh;
+    color: #181818;
+    
+
+}
+
+.k_img{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.k_img > img{
+    max-width: 35vw;
+
+
+}
+
+
+
+
 #ombud_wrapper{
     display: grid;
     width: 100%;
@@ -36,7 +276,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0px 250px 20vh 250px;
+    padding: 10vw;
     color: #181818;
 }
 
@@ -86,20 +326,20 @@
 
 .logo_list_img{
     max-width: auto;
-    max-height: 70px;
+    max-height: 5vw;
 
 }
 
 #postnord_logo{
     max-width: auto;
-    max-height: 100px;
+    max-height: 7vw;
 
 }
 
 #system_logo{
 
     max-width: auto;
-    max-height: 120px;
+    max-height: 7vw;
 
 }
 
@@ -122,7 +362,7 @@
     position: absolute;
     margin-top: 0px;
     width: 28vw;
-    height: 650px;
+    height: 40vw;
     
     z-index: 2;
 
@@ -175,12 +415,12 @@
 #hours_background{
    
     position: absolute;
-    margin-top: -310px;
+    margin-top: -35vh;
     margin-left:-45vw ;
     top: 50%;
     left: 50%;
     width: 90vw;
-    height: 700px;
+    height: 80vh;
     z-index: 2;
     background-color: rgba(155, 154, 154, 0.4);
     backdrop-filter: blur(15px);
@@ -204,19 +444,19 @@
    
 
     z-index: 3;
-    margin-top: 130px;
+    margin-top: 15vh;
     
     
 }
 
 
 .hours_content{
-    padding-top: 70px;
+    
     z-index: 3;
 }
 
 #hours_title{
-    margin-bottom: 40px;
+    padding-bottom: 90px;
     font-size: 80px;
     font-family: bebas Neue;
     
@@ -422,12 +662,12 @@ header{
 #header_logo_link{
     
     text-decoration: none;
-   
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:center;
-   
+    z-index: 70;
 
 }
 
@@ -456,7 +696,11 @@ header{
 
 nav{
     position: absolute;
+    right: 30vw;
+    left: 30vw;
     
+    width: 40vw;
+   
 }
 
 
@@ -465,12 +709,18 @@ nav{
 
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     list-style: none;
     padding: 0;
 
 }
 
+
+.nav_list_item{
+    
+    
+    list-style: none;
+}
 
 #mobile_nav_btn_img{
     display: none;
@@ -504,8 +754,10 @@ nav{
     background-image: url(../img/tomater_helbild2.jpg);
     background-position: 50% 80%;
     background-size: 100%;
-    padding-top: 80px;
+    padding-top: 30vh;
 }
+
+
 
 
 
@@ -520,23 +772,6 @@ nav{
         
     }
 
-    .nav_list_item{
-        margin-left: 100px;
-        margin-right: 100px;
-        
-        list-style: none;
-    }
-
-    nav{
-        position: fixed;
-        right: 0;
-        left: 0;
-        margin-left: 400px;
-        margin-right: 400px;
-        
-        
-    }
-
 }
 @media screen and (max-width: 1600px){
     #welcome_title > *{
@@ -547,24 +782,7 @@ nav{
         
         
     }
-
-    .nav_list_item{
-        margin-left: 100px;
-        margin-right: 100px;
-        
-        list-style: none;
-    }
-
-    nav{
-        position: fixed;
-        right: 0;
-        left: 0;
-        margin-left: 400px;
-        margin-right: 400px;
-       
-        
-        
-    }
+  
 }
 
 @media screen and (max-width: 1100px){
@@ -575,30 +793,10 @@ nav{
         font-size:60px ;  
     }
 
-
-
-    .nav_list_item{
-        margin-left: 20px;
-        margin-right: 20px;
-        
-        list-style: none;
-    }
-
-    nav{
-        position: fixed;
-        right: 0;
-        left: 0;
-        margin-left: 400px;
-        margin-right: 400px;
-        padding-left: 60px ;
-        
-        
-    }
-
 }
 
 #welcome_title{
-    margin-top: 200px;
+    
     color: #FFFAF1;
 }
 
@@ -696,11 +894,12 @@ nav{
     grid-template-areas: 
     'ti ti'
     'sc ic'
+    'sl il'
     ;
     
-    grid-template-rows: 30% auto;
+    grid-template-rows: 30% auto 600px;
     grid-template-columns: repeat(2, 1fr);
-
+    height: 100%;
     
     
 
@@ -745,6 +944,7 @@ nav{
 #store_info{
     grid-area: sc;
 }
+
 #island_info{
     grid-area: ic;
    
@@ -758,7 +958,6 @@ nav{
     margin-right:60px;
     margin-left:60px;
     margin-top: 15vh;
-    margin-bottom: 30vh;
   
 }
 
@@ -787,37 +986,59 @@ nav{
     color: #0b4229;
 }
 
+
+
 .info_logo{
-
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
-    margin-bottom: 150px;
+    padding-top: 6vh ;
 
+}
+
+
+#info_store_logo_desk > img{
+    max-height: 60px;
+    margin-top: 30px;
+
+}
+
+#info_island_logo_desk > a > img{
+    max-height: 120px;
+}
+
+
+#info_island_logo_desk{
+    
+    grid-area: il ;
+    
+}
+
+#info_store_logo_desk{
+    grid-area: sl;
+
+}
+
+
+
+#info_island_logo{
+    
+    display: none;
+    
 }
 
 #info_store_logo{
-
-    margin-top: 22vh;
-   
-}
-
-#info_store_logo > img{
-    max-height: 60px;
+    display: none;
 
 }
 
-#info_island_logo{
-    margin-top: 7vh;
-    
 
-}
 
-#info_island_logo > a > img{
-    max-height: 120px;
 
-}
+
+
+
+
 
 .red_border{
     background-color: rgb(180, 56, 34);
@@ -926,9 +1147,352 @@ footer{
 
 }
 
+
+
+
+
+
+
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media /*Mobile*/ screen and (max-width: 767px){
+
+    #news_wrapper{
+
+        display: grid;
+            width: 100%;
+            height: 100%;
+            grid-template-areas: 
+            'of_ti'
+            'offers'
+            'fo' 
+            ;
+        
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: 38vh auto 100px;
+            background-position: 0 65%;
+            background-size: cover;
+            background-attachment: fixed;
+            background-color: #eceaea;
+        
+        }
+        
+        #news_title_container{
+            grid-area: of_ti;
+            font-size: 40px;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: flex-end;
+        
+        }
+        #news_title_container > h1{
+           margin-bottom: 40px;
+           margin-left: 4vw;
+           font-family: bebas Neue;
+           color: #181818;
+        }
+        
+        #offers_container{
+            grid-area:offers;
+            display: flex;
+            flex-direction: row;
+            
+            justify-content: center;
+            margin-bottom: 10vh;
+        }
+        
+        #offers_list{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            
+            justify-content: center;
+            padding: 0;
+            list-style: none;
+            flex: 1;
+            padding-right: 4vw ;
+            padding-left: 4vw;
+            flex-wrap: wrap;
+            
+        }
+        
+        .offers_list_item{
+            width: 320px;
+            height: 350px;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+        
+            align-items: center;
+            margin-right: 6vw;
+            margin-bottom: 6vh;
+            border-radius: 20px;
+        
+            transition: 0.3s;
+        
+        
+        }
+        
+        .offers_list_item > img{
+            margin-top: 3vh;
+            max-width: 200px ;
+        
+        }
+        
+        .offers_list_item > h3{
+            margin-top: 6vh;
+            
+        
+        }
+        
+        
+        .offers_list_item > h2{
+            margin-top: 3vh;
+            color: rgb(196, 72, 51);
+            
+        
+        }
+        
+        .offers_list_item:hover{
+            transform: scale(1.1);
+            transition: 0.3s;
+        
+            
+        
+        
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    #karingon_wrapper{
+        display: grid;
+        width: 100%;
+        height: 100%;
+        grid-template-areas: 
+        'kti'
+        'bor '
+        'atx'
+        'aim'
+        'htx' 
+        'him'
+        'stx' 
+        'sim'
+        'fo' 
+        ;
+    
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 100vh 30px 70vh 50vh 70vh 50vh 70vh 50vh 100px;
+        background-position: 0 65%;
+        background-size: cover;
+        background-attachment: fixed;
+        background-color: whitesmoke;
+    }
+    
+    #karingon_title_container{
+        grid-area: kti;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        font-size: 80px;
+        font-family: bebas Neue;
+        color: #181818;
+        background-image: url(../img/boat.jpg) ;
+        background-size: cover;
+        background-position: 0% 40%;
+        background-attachment: fixed;
+        
+        
+    }
+    
+    #karingon_border{
+        grid-area: bor;
+        background-color: rgb(180, 56, 34);
+        height: 100%;
+        width: 100%;
+        
+    }
+    
+    #karingon_title_container > h1{
+        font-family: bebas Neue;
+        margin-bottom: -20px;
+    }
+    
+    #k_img_about_island{
+        grid-area: aim;
+    }
+    #k_img_history{
+        grid-area:him ;
+    }
+    #k_img_ssrs{
+        grid-area: sim;
+    }
+    
+    #k_about_island{
+        grid-area: atx;
+        padding-top: 10vh;
+    }
+    #k_history{
+        grid-area: htx;
+    }
+    #k_ssrs{
+        grid-area: stx;
+    }
+    
+    
+    .k_text_article{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 7vw;
+        
+    }
+    .k_text_article > h3{
+        font-size: 5vh;
+        margin-bottom: 5vh;
+        color: #181818;
+    }
+    
+    .k_text_article > p{
+        font-size: 3vh;
+        color: #181818;
+        
+    
+    }
+    
+    .k_img{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    
+    }
+    
+    .k_img > img{
+        max-width: 70vw;
+    
+    
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     #ombud_wrapper{
         display: grid;
@@ -1073,7 +1637,6 @@ footer{
     
 
     #hours_background{
-   
         display: none;
     }
     
@@ -1092,9 +1655,10 @@ footer{
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: 250px auto;
         min-width: auto;
-        background-image: url(../img/fruit_edit.jpg);
+        background-image: url(../img/corner_low_angle_edit.jpg);
         background-attachment: fixed;
         background-position: 0 50%;
+        background-size: cover;
         
     
         
@@ -1222,9 +1786,10 @@ footer{
     
     #hitta_hit{
         grid-area: hi ;
-        background-image: url(../img/kuling_white.jpg);
+        background-image: url(../img/cucumber.jpg);
         background-attachment: fixed;
-        background-position: 0 60%;
+        background-position: 0 10%;
+        background-size:cover;
       
     
     }
@@ -1264,7 +1829,7 @@ footer{
 #index_wrapper{
 
     display: grid;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     grid-template-areas: 
     
@@ -1277,7 +1842,7 @@ footer{
     ;
 
     grid-template-columns: 1fr;
-    grid-template-rows: 200vh 20px auto 20px auto 100px;
+    grid-template-rows: 100vh 20px auto 20px auto 100px;
     
 
 }
@@ -1424,7 +1989,7 @@ header{
     color: #FFFAF1;   
 
     padding: 10px;
-    margin: 70px;
+    margin: 50px;
 
     
 
@@ -1453,13 +2018,14 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    
 
     height: 100%;
     background-image: url(../img/tomater_helbild2.jpg);
     background-position: 50% 80%;
     /* background-size: 150%; */
     width: 100%;
+    padding-top: 40vh;
     
 }
 
@@ -1810,6 +2376,17 @@ footer{
 .footer_fbLogo{
     max-height: 70px;
     margin-right: 15px;
+
+}
+
+#info_island_logo_desk{
+    
+    display: none;
+    
+}
+
+#info_store_logo_desk{
+   display: none;
 
 }
 
